feat: adjust the company informations acquisition
